--- a/translations/the_hunt.tex/fr.po
+++ b/translations/the_hunt.tex/fr.po
@@ -520,7 +520,7 @@ msgstr ""
 "    \\medskip\n"
 "\n"
 "    \\begin{tabularx}{0.95\\linewidth}{XXXX}\n"
-"    \\darkcell{\\raisebox{-.2\\height}{\\svg{bronze}} \\textbf{Facile}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{bronze}} \\textbf{Facile}} &\n"
 "    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{silver}} \\textbf{Normal}} &\n"
 "    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{golden}} \\textbf{Difficile}} &\n"
 "    \\darkcell{\\raisebox{-.2\\height}{\\svg[20]{azure}} \\textbf{Impossible}}\\\\\n"
@@ -737,7 +737,7 @@ msgid ""
 "{\\art/faerie_dragon.jpg}}"
 msgstr ""
 "{l}{0.28\\textwidth} \\raisebox{0pt}"
-"[\\dimexpr\\height-1.2\\baselineskip\\relax]{\\framedimage[1.1\\linewidth]"
+"[\\dimexpr\\height-0.2\\baselineskip\\relax]{\\framedimage[1.1\\linewidth]"
 "{\\art/faerie_dragon.jpg}}"
 
 #. type: Plain text
