--- a/translations/sentinels.tex/fr.po
+++ b/translations/sentinels.tex/fr.po
@@ -628,7 +628,6 @@ msgstr ""
 
 #. type: Plain text
 #: coops/sentinels.tex:183
-#, msgid ""
 msgid ""
 "\\hommtable[]{20}{ \\centering \\medskip \\textbf{Strength of Enemy Armies}\\"
 "\\ \\bigskip \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} & "
@@ -659,24 +658,32 @@ msgid ""
 "\\\\ \\end{tabularx} }"
 msgstr ""
 "\\hommtable[]{20}{ \\centering \\medskip \\textbf{Force de l'Armée Ennemie}\\"
-"\\ \\bigskip \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} "
-"& \\darkcell{Manches 6 + 7} & \\darkcell{Manches 8 + 9} & \\darkcell{Manche "
-"10}\\\\ \\darkcell[1.4]{Facile} & \\lightcell[1.4]{\\svg[12]{bronze}\\svg[12]{silver}"
-"\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{silver}"
-"\\svg[12]{golden}\\svg[12]{golden}} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{azure}"
-"\\footref{azure} \\linebreak (2\\svg[12]{bronze}, 4\\svg[12]{silver}, 3\\svg[12]{golden}, 1\\svg[12]{azure})}\\"
-"\\ \\darkcell[1.4]{Normal} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{silver}"
-"\\svg[12]{golden}\\svg[12]{golden}} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}"
-"\\svg[12]{azure}} & \\lightcell[1.4]{\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{azure}"
-"\\footref{azure} \\linebreak (2\\svg[12]{silver}, 7\\svg[12]{golden}, 1\\svg[12]{azure})}\\\\ "
-"\\darkcell[1.4]{Difficile} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}"
-"\\svg[12]{golden}\\svg[12]{golden}} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{golden}"
-"\\svg[12]{azure}} & \\lightcell[1.4]{\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{azure}\\svg[12]{azure}"
-"\\footref{azure} \\linebreak (2\\svg[12]{silver}, 6\\svg[12]{golden}, 2\\svg[12]{azure})}\\\\ "
-"\\darkcell[1.4]{Impossible} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{golden}"
-"\\svg[12]{golden}\\svg[12]{golden}} & \\lightcell[1.4]{\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}"
-"\\svg[12]{azure}} & \\lightcell[1.4]{\\svg[12]{golden}\\svg[12]{azure}\\svg[12]{azure}\\svg[12]{azure} "
-"\\footref{azure} \\linebreak (7\\svg[12]{golden}, 3\\svg[12]{azure})}\\\\ \\end{tabularx} }"
+"\\ \\bigskip \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} & "
+"\\darkcell{Manches 6 + 7} & \\darkcell{Manches 8 + 9} & \\darkcell{Manche "
+"10}\\\\ \\darkcell[1.4]{Facile} & \\lightcell[1.4]{\\svg[12]{bronze}\\svg[12]"
+"{silver}\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}} & "
+"\\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{silver}\\svg[12]"
+"{golden}\\svg[12]{golden}} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]"
+"{silver}\\svg[12]{golden}\\svg[12]{azure}\\footref{azure} \\linebreak "
+"(2\\svg[12]{bronze}, 4\\svg[12]{silver}, 3\\svg[12]{golden}, 1\\svg[12]"
+"{azure})}\\\\ \\darkcell[1.4]{Normal} & \\lightcell[1.4]{\\svg[12]{silver}"
+"\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{golden}} & "
+"\\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{silver}\\svg[12]"
+"{golden}\\svg[12]{azure}} & \\lightcell[1.4]{\\svg[12]{golden}\\svg[12]"
+"{golden}\\svg[12]{golden}\\svg[12]{azure}\\footref{azure} \\linebreak "
+"(2\\svg[12]{silver}, 7\\svg[12]{golden}, 1\\svg[12]{azure})}\\\\ "
+"\\darkcell[1.4]{Difficile} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]"
+"{silver}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}} & "
+"\\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}\\svg[12]"
+"{golden}\\svg[12]{azure}} & \\lightcell[1.4]{\\svg[12]{golden}\\svg[12]"
+"{golden}\\svg[12]{azure}\\svg[12]{azure}\\footref{azure} \\linebreak "
+"(2\\svg[12]{silver}, 6\\svg[12]{golden}, 2\\svg[12]{azure})}\\\\ "
+"\\darkcell[1.4]{Impossible} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]"
+"{golden}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}} & "
+"\\lightcell[1.4]{\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]"
+"{golden}\\svg[12]{azure}} & \\lightcell[1.4]{\\svg[12]{golden}\\svg[12]"
+"{azure}\\svg[12]{azure}\\svg[12]{azure} \\footref{azure} \\linebreak "
+"(7\\svg[12]{golden}, 3\\svg[12]{azure})}\\\\ \\end{tabularx} }"
 
 #. type: Plain text
 #: coops/sentinels.tex:187
