--- a/translations/close_to_enemies.tex/ru.po
+++ b/translations/close_to_enemies.tex/ru.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-08-02 19:31+0200\n"
+"POT-Creation-Date: 2025-11-06 23:19+0100\n"
 "PO-Revision-Date: 2025-08-02 19:31+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -33,7 +33,7 @@ msgstr ""
 #: campaigns/castle_two_knights_defense.tex:5
 #: campaigns/castle_two_knights_defense.tex:91
 #: campaigns/castle_two_knights_defense.tex:129 sections/credits.tex:10
-#: sections/random_scenario.tex:5 sections/random_scenario.tex:283
+#: sections/random_scenario.tex:5 sections/random_scenario.tex:275
 #: sections/recommendations.tex:71 sections/recommendations.tex:126
 #: sections/what_to_play.tex:5
 #, no-wrap
@@ -125,7 +125,7 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:174
 #: campaigns/inferno_steadwicks_fall.tex:194
 #: campaigns/inferno_deal_with_the_devil.tex:148
-#: sections/random_scenario.tex:306
+#: sections/random_scenario.tex:298
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
@@ -148,11 +148,13 @@ msgstr ""
 #: coops/stand_united.tex:31 clash/bloody_grail.tex:29
 #: clash/force_of_will.tex:31 clash/dragoncurse_castle.tex:34
 #: clash/the_fractured_kingdoms.tex:26
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
-"\\textbf{Town Buildings:} \\bronze\\ Dwelling\n"
+"\\textbf{Town Buildings:} \\svg{bronze} Dwelling\n"
 "\n"
 msgstr ""
+"\\textbf{Городские постройки:} \\svg{bronze} Жилища, Цитадель\n"
+"\n"
 
 #.  !TeX spellcheck = en_US
 #. type: Plain text
@@ -229,14 +231,25 @@ msgstr ""
 
 #. type: multicols
 #: coops/close_to_enemies.tex:31
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{\\nth{9} Round:}\n"
+#| "\\begin{itemize}\n"
+#| "  \\item Repeat the Timed Events of Round 6.\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
-"  \\item  1 × A Few \\bronze\\ Units of your choice\n"
+"  \\item  1 × A Few \\svg{bronze} Units of your choice\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{Раунд 9:}\n"
+"\\begin{itemize}\n"
+"  \\item Повторите события раунда 6.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/close_to_enemies.tex:42
@@ -444,8 +457,9 @@ msgid ""
 msgstr ""
 
 #. type: table*
-#: coops/close_to_enemies.tex:205
-#, no-wrap
+#: coops/close_to_enemies.tex:195
+#, fuzzy, no-wrap
+#| msgid "\\hommtable[]{20}{ \\centering \\medskip \\textbf{Strength of Enemy Armies}\\\\ \\bigskip \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} & \\darkcell{Rounds 6 + 7} & \\darkcell{Rounds 8 + 9} & \\darkcell{Round 10}\\\\ \\darkcell[1.4]{Easy} & \\lightcell[1.4]{\\svg[12]{bronze}\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{golden}} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{azure}\\footref{azure} \\linebreak (2\\svg[12]{bronze}, 4\\svg[12]{silver}, 3\\svg[12]{golden}, 1\\svg[12]{azure})}\\\\ \\darkcell[1.4]{Normal} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{golden}} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{azure}} & \\lightcell[1.4]{\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{azure}\\footref{azure} \\linebreak (2\\svg[12]{silver}, 7\\svg[12]{golden}, 1\\svg[12]{azure})}\\\\ \\darkcell[1.4]{Hard} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{azure}} & \\lightcell[1.4]{\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{azure}\\svg[12]{azure}\\footref{azure} \\linebreak (2\\svg[12]{silver}, 6\\svg[12]{golden}, 2\\svg[12]{azure})}\\\\ \\darkcell[1.4]{Impossible} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}} & \\lightcell[1.4]{\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{azure}} & \\lightcell[1.4]{\\svg[12]{golden}\\svg[12]{azure}\\svg[12]{azure}\\svg[12]{azure}\\footref{azure} \\linebreak (7\\svg[12]{golden}, 3\\svg[12]{azure})}\\\\ \\end{tabularx} }"
 msgid ""
 "[b!]\n"
 "  \\hommtable[]{18}{\n"
@@ -454,60 +468,50 @@ msgid ""
 "    \\textbf{Enemy Clan Armies}\\\\\n"
 "    \\bigskip\n"
 "\n"
-"    \\let\\origbronze\\bronze\n"
-"    \\let\\origsilver\\silver\n"
-"    \\let\\origgolden\\golden\n"
-"    \\let\\origazure\\azure\n"
-"    \\renewcommand{\\bronze}{\\origbronze[12]}\n"
-"    \\renewcommand{\\silver}{\\origsilver[12]}\n"
-"    \\renewcommand{\\golden}{\\origgolden[12]}\n"
-"    \\renewcommand{\\azure}{\\origazure[12]}\n"
-"\n"
-"      \\begin{tabularx}{0.95\\linewidth}{p{0.2\\linewidth}XXXX} &\n"
+"    \\begin{tabularx}{0.95\\linewidth}{p{0.2\\linewidth}XXXX} &\n"
 "      \\darkcell{\\textbf{Easy}} &\n"
 "      \\darkcell{\\textbf{Normal}} &\n"
 "      \\darkcell{\\textbf{Hard}} &\n"
 "      \\darkcell{\\textbf{Impossible}}\\\\\n"
 "      \\darkcell[1.2]{First wave}\n"
-"        & \\lightcell[1.2]{\\bronze}\n"
-"        & \\lightcell[1.2]{\\bronze \\bronze}\n"
-"        & \\lightcell[1.2]{\\bronze \\bronze \\bronze}\n"
-"        & \\lightcell[1.2]{\\bronze \\bronze \\silver} \\\\\n"
+"        & \\lightcell[1.2]{\\svg[12]{bronze}}\n"
+"        & \\lightcell[1.2]{\\svg[12]{bronze}\\svg[12]{bronze}}\n"
+"        & \\lightcell[1.2]{\\svg[12]{bronze}\\svg[12]{bronze}\\svg[12]{bronze}}\n"
+"        & \\lightcell[1.2]{\\svg[12]{bronze}\\svg[12]{bronze}\\svg[12]{silver}} \\\\\n"
 "\n"
 "      \\darkcell[1.2]{Second wave}\n"
-"        & \\lightcell[1.2]{\\bronze \\bronze}\n"
-"        & \\lightcell[1.2]{\\bronze \\bronze \\silver}\n"
-"        & \\lightcell[1.2]{\\bronze \\silver \\silver}\n"
-"        & \\lightcell[1.2]{\\silver \\silver \\silver} \\\\\n"
+"        & \\lightcell[1.2]{\\svg[12]{bronze}\\svg[12]{bronze}}\n"
+"        & \\lightcell[1.2]{\\svg[12]{bronze}\\svg[12]{bronze}\\svg[12]{silver}}\n"
+"        & \\lightcell[1.2]{\\svg[12]{bronze}\\svg[12]{silver}\\svg[12]{silver}}\n"
+"        & \\lightcell[1.2]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{silver}} \\\\\n"
 "\n"
 "      \\darkcell[1.2]{Third wave}\n"
-"        & \\lightcell[1.2]{\\bronze \\silver \\silver}\n"
-"        & \\lightcell[1.2]{\\bronze \\bronze \\silver \\silver}\n"
-"        & \\lightcell[1.2]{\\bronze \\bronze \\silver \\silver \\silver}\n"
-"        & \\lightcell[1.2]{\\bronze \\bronze \\silver \\silver \\golden} \\\\\n"
+"        & \\lightcell[1.2]{\\svg[12]{bronze}\\svg[12]{silver}\\svg[12]{silver}}\n"
+"        & \\lightcell[1.2]{\\svg[12]{bronze}\\svg[12]{bronze}\\svg[12]{silver}\\svg[12]{silver}}\n"
+"        & \\lightcell[1.2]{\\svg[12]{bronze}\\svg[12]{bronze}\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{silver}}\n"
+"        & \\lightcell[1.2]{\\svg[12]{bronze}\\svg[12]{bronze}\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}} \\\\\n"
 "\n"
 "      \\darkcell[1.2]{Settlement Defenders}\n"
-"        & \\lightcell[1.2]{ \\bronze \\silver \\silver \\golden \\golden}\n"
-"        & \\lightcell[1.2]{ \\silver \\golden \\golden \\golden \\golden}\n"
-"        & \\lightcell[1.2]{ \\golden \\golden \\golden \\golden \\golden}\n"
-"        & \\lightcell[1.2]{ \\silver \\golden \\golden \\golden \\azure} \\\\\n"
-"\n"
-"      \\end{tabularx}\n"
+"        & \\lightcell[1.2]{\\svg[12]{bronze}\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{golden}}\n"
+"        & \\lightcell[1.2]{\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}}\n"
+"        & \\lightcell[1.2]{\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}}\n"
+"        & \\lightcell[1.2]{\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{azure}} \\\\\n"
+"    \\end{tabularx}\n"
 "  }"
-msgstr ""
+msgstr "\\hommtable[]{20}{ \\centering \\medskip \\textbf{Сила вражеской армии}\\\\ \\bigskip \\begin{tabularx}{0.95\\linewidth}{p{0.18\\linewidth}XXXX} & \\darkcell{Раунды 6 + 7} & \\darkcell{Раунды 8 + 9} & \\darkcell{Раунд 10}\\\\ \\darkcell[1.4]{Лёгкий} & \\lightcell[1.4]{\\svg[12]{bronze}\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{golden}} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{azure}\\footref{azure} \\linebreak (2\\svg[12]{bronze}, 4\\svg[12]{silver}, 3\\svg[12]{golden}, 1\\svg[12]{azure})}\\\\ \\darkcell[1.4]{Нормальный} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{golden}} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{azure}} & \\lightcell[1.4]{\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{azure}\\footref{azure} \\linebreak (2\\svg[12]{silver}, 7\\svg[12]{golden}, 1\\svg[12]{azure})}\\\\ \\darkcell[1.4]{Тяжёлый} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{azure}} & \\lightcell[1.4]{\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{azure}\\svg[12]{azure}\\footref{azure} \\linebreak (2\\svg[12]{silver}, 6\\svg[12]{golden}, 2\\svg[12]{azure})}\\\\ \\darkcell[1.4]{Невозможный} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}} & \\lightcell[1.4]{\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{azure}} & \\lightcell[1.4]{\\svg[12]{golden}\\svg[12]{azure}\\svg[12]{azure}\\svg[12]{azure}\\footref{azure} \\linebreak (7\\svg[12]{golden}, 3\\svg[12]{azure})}\\\\ \\end{tabularx} }"
 
 #. type: figure
-#: coops/close_to_enemies.tex:215
+#: coops/close_to_enemies.tex:205
 msgid "\\captionof{figure}{\\textbf{3-PLAYER SCENARIO | EXAMPLE}}"
 msgstr ""
 
 #. type: figure
-#: coops/close_to_enemies.tex:222
+#: coops/close_to_enemies.tex:212
 msgid "\\captionof{figure}{\\textbf{4-PLAYER SCENARIO | EXAMPLE}}"
 msgstr ""
 
 #. type: tikzpicture
-#: coops/close_to_enemies.tex:242
+#: coops/close_to_enemies.tex:232
 #, no-wrap
 msgid ""
 "[overlay]\n"
@@ -517,7 +521,7 @@ msgid ""
 msgstr ""
 
 #. type: figure
-#: coops/close_to_enemies.tex:242
+#: coops/close_to_enemies.tex:232
 msgid ""
 "[!h] \\centering \\includegraphics[width=0.75\\paperwidth]{\\maps/"
 "close_to_enemies_p5.png} \\captionof{figure}{\\textbf{5-PLAYER SCENARIO | "
@@ -525,7 +529,7 @@ msgid ""
 msgstr ""
 
 #. type: figure
-#: coops/close_to_enemies.tex:242
+#: coops/close_to_enemies.tex:232
 msgid ""
 "[!h] \\centering \\includegraphics[width=0.75\\paperwidth]{\\maps/"
 "close_to_enemies_p6.png} \\captionof{figure}{\\textbf{6-PLAYER SCENARIO | "
