--- a/translations/titans_stronghold.tex/ru.po
+++ b/translations/titans_stronghold.tex/ru.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-10-23 21:18+0000\n"
+"POT-Creation-Date: 2025-11-06 23:19+0100\n"
 "PO-Revision-Date: 2025-06-27 09:55+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -33,7 +33,7 @@ msgstr ""
 #: campaigns/castle_two_knights_defense.tex:5
 #: campaigns/castle_two_knights_defense.tex:91
 #: campaigns/castle_two_knights_defense.tex:129 sections/credits.tex:10
-#: sections/random_scenario.tex:5 sections/random_scenario.tex:283
+#: sections/random_scenario.tex:5 sections/random_scenario.tex:275
 #: sections/recommendations.tex:71 sections/recommendations.tex:126
 #: sections/what_to_play.tex:5
 #, no-wrap
@@ -149,7 +149,7 @@ msgstr ""
 #: campaigns/inferno_steadwicks_fall.tex:146
 #: campaigns/inferno_deal_with_the_devil.tex:97
 #: campaigns/castle_greek_gift.tex:87 campaigns/castle_sicilian_dragon.tex:95
-#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:285
+#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:277
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
@@ -163,7 +163,7 @@ msgstr ""
 #: coops/titans_stronghold.tex:116 coops/stand_united.tex:94
 #: clash/bloody_grail.tex:120 clash/bloody_grail.tex:126
 #: campaigns/inferno_devilish_plan.tex:204 sections/credits.tex:30
-#: sections/credits.tex:34 sections/random_scenario.tex:314
+#: sections/credits.tex:34 sections/random_scenario.tex:306
 #, no-wrap
 msgid ""
 "\\vspace*{\\fill}\n"
@@ -235,15 +235,21 @@ msgstr ""
 
 #. type: multicols
 #: coops/titans_stronghold.tex:34 coops/emerald_island.tex:30
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
-"  \\item A Pack of \\bronze\\ Units of your choice\n"
-"  \\item A Few \\bronze\\ Units of your choice\n"
+"  \\item A Pack of \\svg{bronze} Units of your choice\n"
+"  \\item A Few \\svg{bronze} Units of your choice\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{Стартовые отряды:}\n"
+"\\begin{itemize}\n"
+"  \\item «pack» \\svg{bronze} отрядов с \\textit{наименьшей} стоимостью найма\n"
+"  \\item «few» \\svg{bronze} отрядов с \\textit{наибольшей} стоимостью найма\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: coops/titans_stronghold.tex:36 campaigns/castle_sicilian_dragon.tex:30
@@ -409,7 +415,7 @@ msgid ""
 msgstr ""
 
 #. type: table*
-#: coops/titans_stronghold.tex:195
+#: coops/titans_stronghold.tex:186
 #, no-wrap
 msgid ""
 "  \\hommtable[]{28}{\n"
@@ -418,83 +424,74 @@ msgid ""
 "    \\textbf{Strength of Titans' Stronghold Armies}\\\\\n"
 "    \\bigskip\n"
 "\n"
-"    \\let\\origbronze\\bronze\n"
-"    \\let\\origsilver\\silver\n"
-"    \\let\\origgolden\\golden\n"
-"    \\let\\origazure\\azure\n"
-"    \\renewcommand{\\bronze}{\\origbronze[12]}\n"
-"    \\renewcommand{\\silver}{\\origsilver[12]}\n"
-"    \\renewcommand{\\golden}{\\origgolden[12]}\n"
-"    \\renewcommand{\\azure}{\\origazure[12]}\n"
-"\n"
-"    \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} & \\darkcell{Easy} & \\darkcell{Normal} & \\darkcell{Hard} & \\darkcell{Impossible}\\\\\n"
+"    \\begin{tabularx}{0.98\\linewidth}{p{0.12\\linewidth}XXXX} & \\darkcell{Easy} & \\darkcell{Normal} & \\darkcell{Hard} & \\darkcell{Impossible}\\\\\n"
 "    \\darkcell[1.2]{1 player}\n"
-"      & \\lightcell[1.2]{3\\bronze 2\\silver 1\\golden 1\\azure}\n"
-"      & \\lightcell[1.2]{2\\bronze 2\\silver 2\\golden 1\\azure}\n"
-"      & \\lightcell[1.2]{2\\bronze 2\\silver 2\\golden 2\\azure}\n"
-"      & \\lightcell[1.2]{1\\bronze 2\\silver 2\\golden 3\\azure}\\\\\n"
+"      & \\lightcell[1.2]{3\\svg[12]{bronze} 2\\svg[12]{silver} 1\\svg[12]{golden} 1\\svg[12]{azure}}\n"
+"      & \\lightcell[1.2]{2\\svg[12]{bronze} 2\\svg[12]{silver} 2\\svg[12]{golden} 1\\svg[12]{azure}}\n"
+"      & \\lightcell[1.2]{2\\svg[12]{bronze} 2\\svg[12]{silver} 2\\svg[12]{golden} 2\\svg[12]{azure}}\n"
+"      & \\lightcell[1.2]{1\\svg[12]{bronze} 2\\svg[12]{silver} 2\\svg[12]{golden} 3\\svg[12]{azure}}\\\\\n"
 "    \\darkcell[1.2]{2 players}\n"
-"      & \\lightcell[1.2]{5\\bronze 5\\silver 3\\golden 1\\azure}\n"
-"      & \\lightcell[1.2]{4\\bronze 5\\silver 3\\golden 2\\azure}\n"
-"      & \\lightcell[1.2]{2\\bronze 5\\silver 5\\golden 3\\azure}\n"
-"      & \\lightcell[1.2]{1\\bronze 5\\silver 7\\golden 4\\azure}\\\\\n"
+"      & \\lightcell[1.2]{5\\svg[12]{bronze} 5\\svg[12]{silver} 3\\svg[12]{golden} 1\\svg[12]{azure}}\n"
+"      & \\lightcell[1.2]{4\\svg[12]{bronze} 5\\svg[12]{silver} 3\\svg[12]{golden} 2\\svg[12]{azure}}\n"
+"      & \\lightcell[1.2]{2\\svg[12]{bronze} 5\\svg[12]{silver} 5\\svg[12]{golden} 3\\svg[12]{azure}}\n"
+"      & \\lightcell[1.2]{1\\svg[12]{bronze} 5\\svg[12]{silver} 7\\svg[12]{golden} 4\\svg[12]{azure}}\\\\\n"
 "    \\darkcell[1.8]{3 players}\n"
-"      & \\lightcell[1.8]{8\\bronze 7\\silver 4\\golden 2\\azure}\n"
-"      & \\lightcell[1.8]{6\\bronze 7\\silver 5\\golden 3\\azure}\n"
-"      & \\lightcell[1.8]{2\\bronze 3\\silver 4\\golden 3\\azure \\linebreak\n"
+"      & \\lightcell[1.8]{8\\svg[12]{bronze} 7\\svg[12]{silver} 4\\svg[12]{golden} 2\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{6\\svg[12]{bronze} 7\\svg[12]{silver} 5\\svg[12]{golden} 3\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{2\\svg[12]{bronze} 3\\svg[12]{silver} 4\\svg[12]{golden} 3\\svg[12]{azure} \\linebreak\n"
 "        Then\\linebreak\n"
-"        2\\bronze 4\\silver 3\\golden 2\\azure}\n"
-"      & \\lightcell[1.8]{1\\bronze 3\\silver 5\\golden 3\\azure \\linebreak\n"
+"        2\\svg[12]{bronze} 4\\svg[12]{silver} 3\\svg[12]{golden} 2\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{1\\svg[12]{bronze} 3\\svg[12]{silver} 5\\svg[12]{golden} 3\\svg[12]{azure} \\linebreak\n"
 "        Then\\linebreak\n"
-"        1\\bronze 4\\silver 5\\golden 3\\azure}\\\\\n"
+"        1\\svg[12]{bronze} 4\\svg[12]{silver} 5\\svg[12]{golden} 3\\svg[12]{azure}}\\\\\n"
 "    \\darkcell[1.8]{4 players}\n"
-"      & \\lightcell[1.8]{10\\bronze 10\\silver\\linebreak 6\\golden 2\\azure}\n"
-"      & \\lightcell[1.8]{8\\bronze 10\\silver 6\\golden 4\\azure}\n"
-"      & \\lightcell[1.8]{2\\bronze 5\\silver 5\\golden 3\\azure \\linebreak\n"
+"      & \\lightcell[1.8]{10\\svg[12]{bronze} 10\\svg[12]{silver}\\linebreak 6\\svg[12]{golden} 2\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{8\\svg[12]{bronze} 10\\svg[12]{silver} 6\\svg[12]{golden} 4\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{2\\svg[12]{bronze} 5\\svg[12]{silver} 5\\svg[12]{golden} 3\\svg[12]{azure} \\linebreak\n"
 "        Then\\linebreak\n"
-"        2\\bronze 5\\silver 5\\golden 3\\azure}\n"
-"      & \\lightcell[1.8]{1\\bronze 5\\silver 7\\golden 4\\azure \\linebreak\n"
+"        2\\svg[12]{bronze} 5\\svg[12]{silver} 5\\svg[12]{golden} 3\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{1\\svg[12]{bronze} 5\\svg[12]{silver} 7\\svg[12]{golden} 4\\svg[12]{azure} \\linebreak\n"
 "        Then\\linebreak\n"
-"        1\\bronze 5\\silver 7\\golden 4\\azure}\\\\\n"
+"        1\\svg[12]{bronze} 5\\svg[12]{silver} 7\\svg[12]{golden} 4\\svg[12]{azure}}\\\\\n"
 "    \\darkcell[1.8]{5 players}\n"
-"      & \\lightcell[1.8]{6\\bronze 6\\silver 4\\golden 1\\azure \\linebreak\n"
+"      & \\lightcell[1.8]{6\\svg[12]{bronze} 6\\svg[12]{silver} 4\\svg[12]{golden} 1\\svg[12]{azure} \\linebreak\n"
 "        Then\\linebreak\n"
-"        7\\bronze 6\\silver 3\\golden 2\\azure}\n"
-"      & \\lightcell[1.8]{5\\bronze 6\\silver 4\\golden 2\\azure \\linebreak\n"
+"        7\\svg[12]{bronze} 6\\svg[12]{silver} 3\\svg[12]{golden} 2\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{5\\svg[12]{bronze} 6\\svg[12]{silver} 4\\svg[12]{golden} 2\\svg[12]{azure} \\linebreak\n"
 "        Then\\linebreak\n"
-"        5\\bronze 6\\silver 4\\golden 3\\azure}\n"
-"      & \\lightcell[1.8]{3\\bronze 6\\silver 6\\golden 4\\azure \\linebreak\n"
+"        5\\svg[12]{bronze} 6\\svg[12]{silver} 4\\svg[12]{golden} 3\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{3\\svg[12]{bronze} 6\\svg[12]{silver} 6\\svg[12]{golden} 4\\svg[12]{azure} \\linebreak\n"
 "        Then\\linebreak\n"
-"        3\\bronze 6\\silver 6\\golden 4\\azure}\n"
-"      & \\lightcell[1.8]{1\\bronze 6\\silver 8\\golden 6\\azure \\linebreak\n"
+"        3\\svg[12]{bronze} 6\\svg[12]{silver} 6\\svg[12]{golden} 4\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{1\\svg[12]{bronze} 6\\svg[12]{silver} 8\\svg[12]{golden} 6\\svg[12]{azure} \\linebreak\n"
 "        Then\\linebreak\n"
-"        2\\bronze 6\\silver 8\\golden 5\\azure}\\\\\n"
+"        2\\svg[12]{bronze} 6\\svg[12]{silver} 8\\svg[12]{golden} 5\\svg[12]{azure}}\\\\\n"
 "    \\darkcell[1.8]{6 players}\n"
-"      & \\lightcell[1.8]{8\\bronze 8\\silver 4\\golden 1\\azure \\linebreak\n"
+"      & \\lightcell[1.8]{8\\svg[12]{bronze} 8\\svg[12]{silver} 4\\svg[12]{golden} 1\\svg[12]{azure} \\linebreak\n"
 "        Then\\linebreak\n"
-"        7\\bronze 7\\silver 5\\golden 2\\azure}\n"
-"      & \\lightcell[1.8]{6\\bronze 8\\silver 4\\golden 3\\azure \\linebreak\n"
+"        7\\svg[12]{bronze} 7\\svg[12]{silver} 5\\svg[12]{golden} 2\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{6\\svg[12]{bronze} 8\\svg[12]{silver} 4\\svg[12]{golden} 3\\svg[12]{azure} \\linebreak\n"
 "        Then\\linebreak\n"
-"        6\\bronze 7\\silver 5\\golden 3\\azure}\n"
-"      & \\lightcell[1.8]{3\\bronze 8\\silver 7\\golden 5\\azure \\linebreak\n"
+"        6\\svg[12]{bronze} 7\\svg[12]{silver} 5\\svg[12]{golden} 3\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{3\\svg[12]{bronze} 8\\svg[12]{silver} 7\\svg[12]{golden} 5\\svg[12]{azure} \\linebreak\n"
 "        Then\\linebreak\n"
-"      3\\bronze 7\\silver 8\\golden 4\\azure}\n"
-"      & \\lightcell[1.8]{3\\bronze 7\\silver 11\\golden 6\\azure \\linebreak\n"
+"      3\\svg[12]{bronze} 7\\svg[12]{silver} 8\\svg[12]{golden} 4\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{3\\svg[12]{bronze} 7\\svg[12]{silver} 11\\svg[12]{golden} 6\\svg[12]{azure} \\linebreak\n"
 "      Then\\linebreak\n"
-"      3\\bronze 8\\silver 10\\golden 6\\azure}\\\\\n"
+"      3\\svg[12]{bronze} 8\\svg[12]{silver} 10\\svg[12]{golden} 6\\svg[12]{azure}}\\\\\n"
 "    \\end{tabularx}\n"
 "  }"
 msgstr ""
 
 #. type: center
-#: coops/titans_stronghold.tex:201
+#: coops/titans_stronghold.tex:192
 msgid ""
 "\\transparent{0.2}{\\includegraphics[width=0.55\\linewidth, keepaspectratio]"
 "{\\art/land_mine.png}}"
 msgstr ""
 
 #. type: tikzpicture
-#: coops/titans_stronghold.tex:209
+#: coops/titans_stronghold.tex:200
 #, no-wrap
 msgid ""
 "[remember picture, overlay]\n"
@@ -504,32 +501,32 @@ msgid ""
 msgstr ""
 
 #. type: minipage
-#: coops/titans_stronghold.tex:246 coops/emerald_island.tex:121
+#: coops/titans_stronghold.tex:237 coops/emerald_island.tex:121
 msgid "\\captionof{figure}{\\textbf{1-PLAYER SCENARIO}}"
 msgstr ""
 
 #. type: minipage
-#: coops/titans_stronghold.tex:246 coops/emerald_island.tex:121
+#: coops/titans_stronghold.tex:237 coops/emerald_island.tex:121
 msgid "\\captionof{figure}{\\textbf{2-PLAYER SCENARIO}}"
 msgstr ""
 
 #.  \linebreak
 #. type: minipage
-#: coops/titans_stronghold.tex:246 coops/emerald_island.tex:121
+#: coops/titans_stronghold.tex:237 coops/emerald_island.tex:121
 msgid "\\captionof{figure}{\\textbf{3-PLAYER SCENARIO}}"
 msgstr ""
 
 #. type: minipage
-#: coops/titans_stronghold.tex:246 coops/emerald_island.tex:121
+#: coops/titans_stronghold.tex:237 coops/emerald_island.tex:121
 msgid "\\captionof{figure}{\\textbf{4-PLAYER SCENARIO}}"
 msgstr ""
 
 #. type: minipage
-#: coops/titans_stronghold.tex:246
+#: coops/titans_stronghold.tex:237
 msgid "\\captionof{figure}{\\textbf{5-PLAYER SCENARIO}}"
 msgstr ""
 
 #. type: minipage
-#: coops/titans_stronghold.tex:246
+#: coops/titans_stronghold.tex:237
 msgid "\\captionof{figure}{\\textbf{6-PLAYER SCENARIO}}"
 msgstr ""
