--- a/translations/emerald_island.tex/de.po
+++ b/translations/emerald_island.tex/de.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2025-06-22 00:57+0200\n"
+"POT-Creation-Date: 2025-11-06 23:19+0100\n"
 "PO-Revision-Date: 2025-07-16 18:04+0200\n"
 "Last-Translator: Andreas Beck <a-beck@gmx.net>\n"
 "Language-Team: German <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -34,7 +34,7 @@ msgstr ""
 #: campaigns/castle_two_knights_defense.tex:5
 #: campaigns/castle_two_knights_defense.tex:91
 #: campaigns/castle_two_knights_defense.tex:129 sections/credits.tex:10
-#: sections/random_scenario.tex:5 sections/random_scenario.tex:285
+#: sections/random_scenario.tex:5 sections/random_scenario.tex:275
 #: sections/recommendations.tex:71 sections/recommendations.tex:126
 #: sections/what_to_play.tex:5
 #, no-wrap
@@ -111,7 +111,7 @@ msgstr ""
 #: campaigns/inferno_steadwicks_fall.tex:146
 #: campaigns/inferno_deal_with_the_devil.tex:97
 #: campaigns/castle_greek_gift.tex:87 campaigns/castle_sicilian_dragon.tex:95
-#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:287
+#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:277
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
@@ -127,7 +127,7 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:174
 #: campaigns/inferno_steadwicks_fall.tex:194
 #: campaigns/inferno_deal_with_the_devil.tex:148
-#: sections/random_scenario.tex:308
+#: sections/random_scenario.tex:298
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
@@ -152,15 +152,15 @@ msgstr ""
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
-"  \\item A Pack of \\bronze\\ Units of your choice\n"
-"  \\item A Few \\bronze\\ Units of your choice\n"
+"  \\item A Pack of \\svg{bronze} Units of your choice\n"
+"  \\item A Few \\svg{bronze} Units of your choice\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\textbf{Starteinheiten:}\n"
 "\\begin{itemize}\n"
-"  \\item Ein Rudel \\bronze{}-Einheiten eurer Wahl\n"
-"  \\item Wenige \\bronze{}-Einheiten eurer Wahl\n"
+"  \\item Ein Rudel \\svg{bronze}-Einheiten eurer Wahl\n"
+"  \\item Wenige \\svg{bronze}-Einheiten eurer Wahl\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -176,23 +176,23 @@ msgstr ""
 "\n"
 
 #. type: minipage
-#: coops/titans_stronghold.tex:244 coops/emerald_island.tex:121
+#: coops/titans_stronghold.tex:237 coops/emerald_island.tex:121
 msgid "\\captionof{figure}{\\textbf{1-PLAYER SCENARIO}}"
 msgstr "\\captionof{figure}{\\textbf{1-SPIELER-SZENARIO}}"
 
 #. type: minipage
-#: coops/titans_stronghold.tex:244 coops/emerald_island.tex:121
+#: coops/titans_stronghold.tex:237 coops/emerald_island.tex:121
 msgid "\\captionof{figure}{\\textbf{2-PLAYER SCENARIO}}"
 msgstr "\\captionof{figure}{\\textbf{2-SPIELER-SZENARIO}}"
 
 #.  \linebreak
 #. type: minipage
-#: coops/titans_stronghold.tex:244 coops/emerald_island.tex:121
+#: coops/titans_stronghold.tex:237 coops/emerald_island.tex:121
 msgid "\\captionof{figure}{\\textbf{3-PLAYER SCENARIO}}"
 msgstr "\\captionof{figure}{\\textbf{3-SPIELER-SZENARIO}}"
 
 #. type: minipage
-#: coops/titans_stronghold.tex:244 coops/emerald_island.tex:121
+#: coops/titans_stronghold.tex:237 coops/emerald_island.tex:121
 msgid "\\captionof{figure}{\\textbf{4-PLAYER SCENARIO}}"
 msgstr "\\captionof{figure}{\\textbf{4-SPIELER-SZENARIO}}"
 
@@ -279,10 +279,10 @@ msgstr ""
 #: clash/the_fractured_kingdoms.tex:26
 #, no-wrap
 msgid ""
-"\\textbf{Town Buildings:} \\bronze\\ Dwelling\n"
+"\\textbf{Town Buildings:} \\svg{bronze} Dwelling\n"
 "\n"
 msgstr ""
-"\\textbf{Startgebäude:} \\bronze{}-Behausung\n"
+"\\textbf{Startgebäude:} \\svg{bronze}-Behausung\n"
 "\n"
 
 #. type: multicols
@@ -361,12 +361,15 @@ msgstr ""
 
 #. type: multicols
 #: coops/emerald_island.tex:65
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "    \\item You can't build a \\svg{golden} Dwelling.\n"
+#| "\n"
 msgid ""
-"    \\item You can't build a \\golden\\ Dwelling.\n"
+"    \\item You can't build a \\svg{golden} Dwelling.\n"
 "\n"
 msgstr ""
-"    \\item Ihr könnt keine \\golden{}-Behausungen bauen.\n"
+"    \\item Ihr könnt keine \\svg{golden}-Behausungen bauen.\n"
 "\n"
 
 #. type: multicols
@@ -411,12 +414,15 @@ msgstr ""
 
 #. type: multicols
 #: coops/emerald_island.tex:78
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "    \\item For the last Mine/Settlement battle, add a \\svg{golden} Neutral Unit. You have unlimited Turns for this battle. You can't use Expert Diplomacy to skip this battle!\n"
+#| "\n"
 msgid ""
-"    \\item For the last Mine/Settlement battle, add a \\golden\\ Neutral Unit. You have unlimited Turns for this battle. You can't use Expert Diplomacy to skip this battle!\n"
+"    \\item For the last Mine/Settlement battle, add a \\svg{golden} Neutral Unit. You have unlimited Turns for this battle. You can't use Expert Diplomacy to skip this battle!\n"
 "\n"
 msgstr ""
-"    \\item Dem Kampf um die letzte Mine/Siedlung wird eine neutrale \\golden{}-Einheit hinzugefügt. Der Kampf kann beliebig viele Runden dauern. Ihr könnt nicht die Experten-Diplomatie benutzen, um diesen Kampf zu überspringen!\n"
+"    \\item Dem Kampf um die letzte Mine/Siedlung wird eine neutrale \\svg{golden}-Einheit hinzugefügt. Der Kampf kann beliebig viele Runden dauern. Ihr könnt nicht die Experten-Diplomatie benutzen, um diesen Kampf zu überspringen!\n"
 "\n"
 
 #. type: multicols
