--- a/translations/sentinels.tex/de.po
+++ b/translations/sentinels.tex/de.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2025-10-23 21:18+0000\n"
+"POT-Creation-Date: 2025-11-06 23:19+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -42,7 +42,7 @@ msgstr ""
 #: campaigns/castle_two_knights_defense.tex:5
 #: campaigns/castle_two_knights_defense.tex:91
 #: campaigns/castle_two_knights_defense.tex:129 sections/credits.tex:10
-#: sections/random_scenario.tex:5 sections/random_scenario.tex:283
+#: sections/random_scenario.tex:5 sections/random_scenario.tex:275
 #: sections/recommendations.tex:71 sections/recommendations.tex:126
 #: sections/what_to_play.tex:5
 #, no-wrap
@@ -164,15 +164,15 @@ msgstr ""
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
-"  \\item A Pack of \\bronze\\ Units with the \\textit{lowest} Recruitment cost\n"
-"  \\item A Few \\bronze\\ Units with the \\textit{highest} Recruitment cost\n"
+"  \\item A Pack of \\svg{bronze} Units with the \\textit{lowest} Recruitment cost\n"
+"  \\item A Few \\svg{bronze} Units with the \\textit{highest} Recruitment cost\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\textbf{Starteinheiten:}\n"
 "\\begin{itemize}\n"
-"  \\item Ein Rudel \\bronze{}-Einheiten mit den \\textit{niedrigsten} Rekrutierungskosten\n"
-"  \\item Wenige \\bronze{}-Einheiten mit den \\textit{höchsten} Rekrutierungskosten\n"
+"  \\item Ein Rudel \\svg{bronze}-Einheiten mit den \\textit{niedrigsten} Rekrutierungskosten\n"
+"  \\item Wenige \\svg{bronze}-Einheiten mit den \\textit{höchsten} Rekrutierungskosten\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -180,10 +180,10 @@ msgstr ""
 #: coops/sentinels.tex:34 campaigns/castle_greek_gift.tex:35
 #, no-wrap
 msgid ""
-"\\textbf{Town Buildings:} \\bronze\\ Dwelling, Citadel\n"
+"\\textbf{Town Buildings:} \\svg{bronze} Dwelling, Citadel\n"
 "\n"
 msgstr ""
-"\\textbf{Startgebäude:} \\bronze{}-Behausung, Zitadelle\n"
+"\\textbf{Startgebäude:} \\svg{bronze}-Behausung, Zitadelle\n"
 "\n"
 
 #. type: multicols
@@ -330,7 +330,7 @@ msgstr ""
 #: campaigns/inferno_steadwicks_fall.tex:146
 #: campaigns/inferno_deal_with_the_devil.tex:97
 #: campaigns/castle_greek_gift.tex:87 campaigns/castle_sicilian_dragon.tex:95
-#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:285
+#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:277
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
@@ -412,7 +412,7 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:174
 #: campaigns/inferno_steadwicks_fall.tex:194
 #: campaigns/inferno_deal_with_the_devil.tex:148
-#: sections/random_scenario.tex:306
+#: sections/random_scenario.tex:298
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
@@ -505,15 +505,7 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:121
-#, fuzzy, no-wrap
-#| msgid ""
-#| "  \\item Enemy armies have 3 \\svg{movement} per Round.\n"
-#| "  \\item Enemy armies move at the end of every Turn, starting with the Turn they spawned.\n"
-#| "  \\item Enemy armies move as described in the rulebook (p.\\,33), but instead of capturing, they destroy everything in their path.\n"
-#| "    Place Black Cubes on any Field they pass through, treating those Fields as empty from that point on.\n"
-#| "  \\item If an enemy's movement could go in different directions, the players decide which way they go.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "  \\item Enemy armies have 3 \\svg{movement} per Round.\n"
 "  \\item Enemy armies move at the end of every Round, starting with the Round they spawned.\n"
@@ -597,7 +589,7 @@ msgstr ""
 #: coops/sentinels.tex:142 coops/stand_united.tex:87
 #: clash/dragoncurse_castle.tex:85 campaigns/inferno_devilish_plan.tex:224
 #: campaigns/castle_greek_gift.tex:120 campaigns/castle_greek_gift.tex:271
-#: sections/credits.tex:28 sections/random_scenario.tex:304
+#: sections/credits.tex:28 sections/random_scenario.tex:296
 #, no-wrap
 msgid ""
 "\\columnbreak\n"
@@ -611,7 +603,7 @@ msgstr ""
 #: coops/titans_stronghold.tex:116 coops/stand_united.tex:94
 #: clash/bloody_grail.tex:120 clash/bloody_grail.tex:126
 #: campaigns/inferno_devilish_plan.tex:204 sections/credits.tex:30
-#: sections/credits.tex:34 sections/random_scenario.tex:314
+#: sections/credits.tex:34 sections/random_scenario.tex:306
 #, no-wrap
 msgid ""
 "\\vspace*{\\fill}\n"
@@ -633,63 +625,71 @@ msgstr ""
 "  \\node at (14, 6) {\\includegraphics[width=0.4\\paperwidth]{\\maps/sentinels.png}};"
 
 #. type: Plain text
-#: coops/sentinels.tex:192
+#: coops/sentinels.tex:183
 msgid ""
 "\\hommtable[]{20}{ \\centering \\medskip \\textbf{Strength of Enemy Armies}\\"
-"\\ \\bigskip \\let\\origbronze\\bronze \\let\\origsilver\\silver "
-"\\let\\origgolden\\golden \\let\\origazure\\azure \\renewcommand{\\bronze}"
-"{\\origbronze[12]} \\renewcommand{\\silver}{\\origsilver[12]} "
-"\\renewcommand{\\golden}{\\origgolden[12]} \\renewcommand{\\azure}"
-"{\\origazure[12]} \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} "
-"& \\darkcell{Rounds 6 + 7} & \\darkcell{Rounds 8 + 9} & \\darkcell{Round "
-"10}\\\\ \\darkcell[1.4]{Easy} & \\lightcell[1.4]{\\bronze \\silver \\silver "
-"\\silver \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver \\golden "
-"\\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\azure "
-"\\footref{azure} \\linebreak (2\\bronze, 4\\silver, 3\\golden, 1\\azure)}\\"
-"\\ \\darkcell[1.4]{Normal} & \\lightcell[1.4]{\\silver \\silver \\silver "
-"\\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver \\golden "
-"\\azure} & \\lightcell[1.4]{\\golden \\golden \\golden \\azure "
-"\\footref{azure} \\linebreak (2\\silver, 7\\golden, 1\\azure)}\\\\ "
-"\\darkcell[1.4]{Hard} & \\lightcell[1.4]{\\silver \\silver \\golden \\golden "
-"\\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\golden \\azure} & "
-"\\lightcell[1.4]{\\golden \\golden \\azure \\azure \\footref{azure} "
-"\\linebreak (2\\silver, 6\\golden, 2\\azure)}\\\\ \\darkcell[1.4]"
-"{Impossible} & \\lightcell[1.4]{\\silver \\golden \\golden \\golden "
-"\\golden} & \\lightcell[1.4]{\\golden \\golden \\golden \\golden \\azure} & "
-"\\lightcell[1.4]{\\golden \\azure \\azure \\azure \\footref{azure} "
-"\\linebreak (7\\golden, 3\\azure)}\\\\ \\end{tabularx} }"
+"\\ \\bigskip \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} & "
+"\\darkcell{Rounds 6 + 7} & \\darkcell{Rounds 8 + 9} & \\darkcell{Round 10}\\"
+"\\ \\darkcell[1.4]{Easy} & \\lightcell[1.4]{\\svg[12]{bronze}\\svg[12]"
+"{silver}\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}} & "
+"\\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{silver}\\svg[12]"
+"{golden}\\svg[12]{golden}} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]"
+"{silver}\\svg[12]{golden}\\svg[12]{azure}\\footref{azure} \\linebreak "
+"(2\\svg[12]{bronze}, 4\\svg[12]{silver}, 3\\svg[12]{golden}, 1\\svg[12]"
+"{azure})}\\\\ \\darkcell[1.4]{Normal} & \\lightcell[1.4]{\\svg[12]{silver}"
+"\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{golden}} & "
+"\\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{silver}\\svg[12]"
+"{golden}\\svg[12]{azure}} & \\lightcell[1.4]{\\svg[12]{golden}\\svg[12]"
+"{golden}\\svg[12]{golden}\\svg[12]{azure}\\footref{azure} \\linebreak "
+"(2\\svg[12]{silver}, 7\\svg[12]{golden}, 1\\svg[12]{azure})}\\\\ "
+"\\darkcell[1.4]{Hard} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}"
+"\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}} & \\lightcell[1.4]"
+"{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{golden}"
+"\\svg[12]{azure}} & \\lightcell[1.4]{\\svg[12]{golden}\\svg[12]{golden}"
+"\\svg[12]{azure}\\svg[12]{azure}\\footref{azure} \\linebreak (2\\svg[12]"
+"{silver}, 6\\svg[12]{golden}, 2\\svg[12]{azure})}\\\\ \\darkcell[1.4]"
+"{Impossible} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{golden}\\svg[12]"
+"{golden}\\svg[12]{golden}\\svg[12]{golden}} & \\lightcell[1.4]{\\svg[12]"
+"{golden}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{azure}} "
+"& \\lightcell[1.4]{\\svg[12]{golden}\\svg[12]{azure}\\svg[12]{azure}\\svg[12]"
+"{azure}\\footref{azure} \\linebreak (7\\svg[12]{golden}, 3\\svg[12]{azure})}"
+"\\\\ \\end{tabularx} }"
 msgstr ""
 "\\hommtable[]{20}{ \\centering \\medskip \\textbf{Schwierigkeitsgrad der "
-"feindlichen Armeen}\\\\ \\bigskip \\let\\origbronze\\bronze "
-"\\let\\origsilver\\silver \\let\\origgolden\\golden \\let\\origazure\\azure "
-"\\renewcommand{\\bronze}{\\origbronze[12]} \\renewcommand{\\silver}"
-"{\\origsilver[12]} \\renewcommand{\\golden}{\\origgolden[12]} "
-"\\renewcommand{\\azure}{\\origazure[12]} \\begin{tabularx}{0.95\\linewidth}"
+"feindlichen Armeen}\\\\ \\bigskip \\begin{tabularx}{0.95\\linewidth}"
 "{p{0.15\\linewidth}XXXX} & \\darkcell{Runden 6 + 7} & \\darkcell{Runden 8 + "
 "9} & \\darkcell{Runde 10}\\\\ \\darkcell[1.4]{Leicht} & \\lightcell[1.4]"
-"{\\bronze \\silver \\silver \\silver \\golden} & \\lightcell[1.4]{\\silver "
-"\\silver \\silver \\golden \\golden} & \\lightcell[1.4]{\\silver \\silver "
-"\\golden \\azure \\footref{azure} \\linebreak (2\\bronze, 4\\silver, "
-"3\\golden, 1\\azure)}\\\\ \\darkcell[1.4]{Normal} & \\lightcell[1.4]"
-"{\\silver \\silver \\silver \\golden \\golden} & \\lightcell[1.4]{\\silver "
-"\\silver \\silver \\golden \\azure} & \\lightcell[1.4]{\\golden \\golden "
-"\\golden \\azure \\footref{azure} \\linebreak (2\\silver, 7\\golden, "
-"1\\azure)}\\\\ \\darkcell[1.4]{Experte} & \\lightcell[1.4]{\\silver \\silver "
-"\\golden \\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\golden "
-"\\golden \\azure} & \\lightcell[1.4]{\\golden \\golden \\azure \\azure "
-"\\footref{azure} \\linebreak (2\\silver, 6\\golden, 2\\azure)}\\\\ "
-"\\darkcell[1.4]{Unmöglich} & \\lightcell[1.4]{\\silver \\golden \\golden "
-"\\golden \\golden} & \\lightcell[1.4]{\\golden \\golden \\golden \\golden "
-"\\azure} & \\lightcell[1.4]{\\golden \\azure \\azure \\azure "
-"\\footref{azure} \\linebreak (7\\golden, 3\\azure)}\\\\ \\end{tabularx} }"
+"{\\svg[12]{bronze}\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{silver}"
+"\\svg[12]{golden}} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}"
+"\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{golden}} & \\lightcell[1.4]"
+"{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{azure}"
+"\\footref{azure} \\linebreak (2\\svg[12]{bronze}, 4\\svg[12]{silver}, "
+"3\\svg[12]{golden}, 1\\svg[12]{azure})}\\\\ \\darkcell[1.4]{Normal} & "
+"\\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]{silver}\\svg[12]"
+"{golden}\\svg[12]{golden}} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]"
+"{silver}\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{azure}} & "
+"\\lightcell[1.4]{\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]"
+"{azure}\\footref{azure} \\linebreak (2\\svg[12]{silver}, 7\\svg[12]{golden}, "
+"1\\svg[12]{azure})}\\\\ \\darkcell[1.4]{Experte} & \\lightcell[1.4]{\\svg[12]"
+"{silver}\\svg[12]{silver}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]"
+"{golden}} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]{silver}\\svg[12]"
+"{golden}\\svg[12]{golden}\\svg[12]{azure}} & \\lightcell[1.4]{\\svg[12]"
+"{golden}\\svg[12]{golden}\\svg[12]{azure}\\svg[12]{azure}\\footref{azure} "
+"\\linebreak (2\\svg[12]{silver}, 6\\svg[12]{golden}, 2\\svg[12]{azure})}\\\\ "
+"\\darkcell[1.4]{Unmöglich} & \\lightcell[1.4]{\\svg[12]{silver}\\svg[12]"
+"{golden}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}} & "
+"\\lightcell[1.4]{\\svg[12]{golden}\\svg[12]{golden}\\svg[12]{golden}\\svg[12]"
+"{golden}\\svg[12]{azure}} & \\lightcell[1.4]{\\svg[12]{golden}\\svg[12]"
+"{azure}\\svg[12]{azure}\\svg[12]{azure}\\footref{azure} \\linebreak "
+"(7\\svg[12]{golden}, 3\\svg[12]{azure})}\\\\ \\end{tabularx} }"
 
 #. type: Plain text
-#: coops/sentinels.tex:196
+#: coops/sentinels.tex:187
 msgid "\\stepcounter{footnote}"
 msgstr "\\stepcounter{footnote}"
 
 #. type: footnotetext{#2}
-#: coops/sentinels.tex:196
+#: coops/sentinels.tex:187
 msgid ""
 "Always 1 Unit of Azure Dragons (starting Units of Boss Army). The rest is "
 "random\\label{azure}."
