--- a/translations/titans_stronghold.tex/de.po
+++ b/translations/titans_stronghold.tex/de.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2025-10-23 21:18+0000\n"
+"POT-Creation-Date: 2025-11-06 23:19+0100\n"
 "PO-Revision-Date: 2025-06-28 19:46+0200\n"
 "Last-Translator: Andreas Beck <a-beck@gmx.net>\n"
 "Language-Team: German <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -34,7 +34,7 @@ msgstr ""
 #: campaigns/castle_two_knights_defense.tex:5
 #: campaigns/castle_two_knights_defense.tex:91
 #: campaigns/castle_two_knights_defense.tex:129 sections/credits.tex:10
-#: sections/random_scenario.tex:5 sections/random_scenario.tex:283
+#: sections/random_scenario.tex:5 sections/random_scenario.tex:275
 #: sections/recommendations.tex:71 sections/recommendations.tex:126
 #: sections/what_to_play.tex:5
 #, no-wrap
@@ -148,7 +148,7 @@ msgstr ""
 #: campaigns/inferno_steadwicks_fall.tex:146
 #: campaigns/inferno_deal_with_the_devil.tex:97
 #: campaigns/castle_greek_gift.tex:87 campaigns/castle_sicilian_dragon.tex:95
-#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:285
+#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:277
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
@@ -162,7 +162,7 @@ msgstr ""
 #: coops/titans_stronghold.tex:116 coops/stand_united.tex:94
 #: clash/bloody_grail.tex:120 clash/bloody_grail.tex:126
 #: campaigns/inferno_devilish_plan.tex:204 sections/credits.tex:30
-#: sections/credits.tex:34 sections/random_scenario.tex:314
+#: sections/credits.tex:34 sections/random_scenario.tex:306
 #, no-wrap
 msgid ""
 "\\vspace*{\\fill}\n"
@@ -257,15 +257,15 @@ msgstr ""
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
-"  \\item A Pack of \\bronze\\ Units of your choice\n"
-"  \\item A Few \\bronze\\ Units of your choice\n"
+"  \\item A Pack of \\svg{bronze} Units of your choice\n"
+"  \\item A Few \\svg{bronze} Units of your choice\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\textbf{Starteinheiten:}\n"
 "\\begin{itemize}\n"
-"  \\item Ein Rudel \\bronze{}-Einheiten eurer Wahl\n"
-"  \\item Wenige \\bronze{}-Einheiten eurer Wahl\n"
+"  \\item Ein Rudel \\svg{bronze}-Einheiten eurer Wahl\n"
+"  \\item Wenige \\svg{bronze}-Einheiten eurer Wahl\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -500,7 +500,7 @@ msgstr ""
 "\n"
 
 #. type: table*
-#: coops/titans_stronghold.tex:195
+#: coops/titans_stronghold.tex:186
 #, no-wrap
 msgid ""
 "  \\hommtable[]{28}{\n"
@@ -509,70 +509,61 @@ msgid ""
 "    \\textbf{Strength of Titans' Stronghold Armies}\\\\\n"
 "    \\bigskip\n"
 "\n"
-"    \\let\\origbronze\\bronze\n"
-"    \\let\\origsilver\\silver\n"
-"    \\let\\origgolden\\golden\n"
-"    \\let\\origazure\\azure\n"
-"    \\renewcommand{\\bronze}{\\origbronze[12]}\n"
-"    \\renewcommand{\\silver}{\\origsilver[12]}\n"
-"    \\renewcommand{\\golden}{\\origgolden[12]}\n"
-"    \\renewcommand{\\azure}{\\origazure[12]}\n"
-"\n"
-"    \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} & \\darkcell{Easy} & \\darkcell{Normal} & \\darkcell{Hard} & \\darkcell{Impossible}\\\\\n"
+"    \\begin{tabularx}{0.98\\linewidth}{p{0.12\\linewidth}XXXX} & \\darkcell{Easy} & \\darkcell{Normal} & \\darkcell{Hard} & \\darkcell{Impossible}\\\\\n"
 "    \\darkcell[1.2]{1 player}\n"
-"      & \\lightcell[1.2]{3\\bronze 2\\silver 1\\golden 1\\azure}\n"
-"      & \\lightcell[1.2]{2\\bronze 2\\silver 2\\golden 1\\azure}\n"
-"      & \\lightcell[1.2]{2\\bronze 2\\silver 2\\golden 2\\azure}\n"
-"      & \\lightcell[1.2]{1\\bronze 2\\silver 2\\golden 3\\azure}\\\\\n"
+"      & \\lightcell[1.2]{3\\svg[12]{bronze} 2\\svg[12]{silver} 1\\svg[12]{golden} 1\\svg[12]{azure}}\n"
+"      & \\lightcell[1.2]{2\\svg[12]{bronze} 2\\svg[12]{silver} 2\\svg[12]{golden} 1\\svg[12]{azure}}\n"
+"      & \\lightcell[1.2]{2\\svg[12]{bronze} 2\\svg[12]{silver} 2\\svg[12]{golden} 2\\svg[12]{azure}}\n"
+"      & \\lightcell[1.2]{1\\svg[12]{bronze} 2\\svg[12]{silver} 2\\svg[12]{golden} 3\\svg[12]{azure}}\\\\\n"
 "    \\darkcell[1.2]{2 players}\n"
-"      & \\lightcell[1.2]{5\\bronze 5\\silver 3\\golden 1\\azure}\n"
-"      & \\lightcell[1.2]{4\\bronze 5\\silver 3\\golden 2\\azure}\n"
-"      & \\lightcell[1.2]{2\\bronze 5\\silver 5\\golden 3\\azure}\n"
-"      & \\lightcell[1.2]{1\\bronze 5\\silver 7\\golden 4\\azure}\\\\\n"
+"      & \\lightcell[1.2]{5\\svg[12]{bronze} 5\\svg[12]{silver} 3\\svg[12]{golden} 1\\svg[12]{azure}}\n"
+"      & \\lightcell[1.2]{4\\svg[12]{bronze} 5\\svg[12]{silver} 3\\svg[12]{golden} 2\\svg[12]{azure}}\n"
+"      & \\lightcell[1.2]{2\\svg[12]{bronze} 5\\svg[12]{silver} 5\\svg[12]{golden} 3\\svg[12]{azure}}\n"
+"      & \\lightcell[1.2]{1\\svg[12]{bronze} 5\\svg[12]{silver} 7\\svg[12]{golden} 4\\svg[12]{azure}}\\\\\n"
 "    \\darkcell[1.8]{3 players}\n"
-"      & \\lightcell[1.8]{8\\bronze 7\\silver 4\\golden 2\\azure}\n"
-"      & \\lightcell[1.8]{6\\bronze 7\\silver 5\\golden 3\\azure}\n"
-"      & \\lightcell[1.8]{2\\bronze 3\\silver 4\\golden 3\\azure \\linebreak\n"
+"      & \\lightcell[1.8]{8\\svg[12]{bronze} 7\\svg[12]{silver} 4\\svg[12]{golden} 2\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{6\\svg[12]{bronze} 7\\svg[12]{silver} 5\\svg[12]{golden} 3\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{2\\svg[12]{bronze} 3\\svg[12]{silver} 4\\svg[12]{golden} 3\\svg[12]{azure} \\linebreak\n"
 "        Then\\linebreak\n"
-"        2\\bronze 4\\silver 3\\golden 2\\azure}\n"
-"      & \\lightcell[1.8]{1\\bronze 3\\silver 5\\golden 3\\azure \\linebreak\n"
+"        2\\svg[12]{bronze} 4\\svg[12]{silver} 3\\svg[12]{golden} 2\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{1\\svg[12]{bronze} 3\\svg[12]{silver} 5\\svg[12]{golden} 3\\svg[12]{azure} \\linebreak\n"
 "        Then\\linebreak\n"
-"        1\\bronze 4\\silver 5\\golden 3\\azure}\\\\\n"
+"        1\\svg[12]{bronze} 4\\svg[12]{silver} 5\\svg[12]{golden} 3\\svg[12]{azure}}\\\\\n"
 "    \\darkcell[1.8]{4 players}\n"
-"      & \\lightcell[1.8]{10\\bronze 10\\silver\\linebreak 6\\golden 2\\azure}\n"
-"      & \\lightcell[1.8]{8\\bronze 10\\silver 6\\golden 4\\azure}\n"
-"      & \\lightcell[1.8]{2\\bronze 5\\silver 5\\golden 3\\azure \\linebreak\n"
+"      & \\lightcell[1.8]{10\\svg[12]{bronze} 10\\svg[12]{silver}\\linebreak 6\\svg[12]{golden} 2\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{8\\svg[12]{bronze} 10\\svg[12]{silver} 6\\svg[12]{golden} 4\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{2\\svg[12]{bronze} 5\\svg[12]{silver} 5\\svg[12]{golden} 3\\svg[12]{azure} \\linebreak\n"
 "        Then\\linebreak\n"
-"        2\\bronze 5\\silver 5\\golden 3\\azure}\n"
-"      & \\lightcell[1.8]{1\\bronze 5\\silver 7\\golden 4\\azure \\linebreak\n"
+"        2\\svg[12]{bronze} 5\\svg[12]{silver} 5\\svg[12]{golden} 3\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{1\\svg[12]{bronze} 5\\svg[12]{silver} 7\\svg[12]{golden} 4\\svg[12]{azure} \\linebreak\n"
 "        Then\\linebreak\n"
-"        1\\bronze 5\\silver 7\\golden 4\\azure}\\\\\n"
+"        1\\svg[12]{bronze} 5\\svg[12]{silver} 7\\svg[12]{golden} 4\\svg[12]{azure}}\\\\\n"
 "    \\darkcell[1.8]{5 players}\n"
-"      & \\lightcell[1.8]{6\\bronze 6\\silver 4\\golden 1\\azure \\linebreak\n"
+"      & \\lightcell[1.8]{6\\svg[12]{bronze} 6\\svg[12]{silver} 4\\svg[12]{golden} 1\\svg[12]{azure} \\linebreak\n"
 "        Then\\linebreak\n"
-"        7\\bronze 6\\silver 3\\golden 2\\azure}\n"
-"      & \\lightcell[1.8]{5\\bronze 6\\silver 4\\golden 2\\azure \\linebreak\n"
+"        7\\svg[12]{bronze} 6\\svg[12]{silver} 3\\svg[12]{golden} 2\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{5\\svg[12]{bronze} 6\\svg[12]{silver} 4\\svg[12]{golden} 2\\svg[12]{azure} \\linebreak\n"
 "        Then\\linebreak\n"
-"        5\\bronze 6\\silver 4\\golden 3\\azure}\n"
-"      & \\lightcell[1.8]{3\\bronze 6\\silver 6\\golden 4\\azure \\linebreak\n"
+"        5\\svg[12]{bronze} 6\\svg[12]{silver} 4\\svg[12]{golden} 3\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{3\\svg[12]{bronze} 6\\svg[12]{silver} 6\\svg[12]{golden} 4\\svg[12]{azure} \\linebreak\n"
 "        Then\\linebreak\n"
-"        3\\bronze 6\\silver 6\\golden 4\\azure}\n"
-"      & \\lightcell[1.8]{1\\bronze 6\\silver 8\\golden 6\\azure \\linebreak\n"
+"        3\\svg[12]{bronze} 6\\svg[12]{silver} 6\\svg[12]{golden} 4\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{1\\svg[12]{bronze} 6\\svg[12]{silver} 8\\svg[12]{golden} 6\\svg[12]{azure} \\linebreak\n"
 "        Then\\linebreak\n"
-"        2\\bronze 6\\silver 8\\golden 5\\azure}\\\\\n"
+"        2\\svg[12]{bronze} 6\\svg[12]{silver} 8\\svg[12]{golden} 5\\svg[12]{azure}}\\\\\n"
 "    \\darkcell[1.8]{6 players}\n"
-"      & \\lightcell[1.8]{8\\bronze 8\\silver 4\\golden 1\\azure \\linebreak\n"
+"      & \\lightcell[1.8]{8\\svg[12]{bronze} 8\\svg[12]{silver} 4\\svg[12]{golden} 1\\svg[12]{azure} \\linebreak\n"
 "        Then\\linebreak\n"
-"        7\\bronze 7\\silver 5\\golden 2\\azure}\n"
-"      & \\lightcell[1.8]{6\\bronze 8\\silver 4\\golden 3\\azure \\linebreak\n"
+"        7\\svg[12]{bronze} 7\\svg[12]{silver} 5\\svg[12]{golden} 2\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{6\\svg[12]{bronze} 8\\svg[12]{silver} 4\\svg[12]{golden} 3\\svg[12]{azure} \\linebreak\n"
 "        Then\\linebreak\n"
-"        6\\bronze 7\\silver 5\\golden 3\\azure}\n"
-"      & \\lightcell[1.8]{3\\bronze 8\\silver 7\\golden 5\\azure \\linebreak\n"
+"        6\\svg[12]{bronze} 7\\svg[12]{silver} 5\\svg[12]{golden} 3\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{3\\svg[12]{bronze} 8\\svg[12]{silver} 7\\svg[12]{golden} 5\\svg[12]{azure} \\linebreak\n"
 "        Then\\linebreak\n"
-"      3\\bronze 7\\silver 8\\golden 4\\azure}\n"
-"      & \\lightcell[1.8]{3\\bronze 7\\silver 11\\golden 6\\azure \\linebreak\n"
+"      3\\svg[12]{bronze} 7\\svg[12]{silver} 8\\svg[12]{golden} 4\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{3\\svg[12]{bronze} 7\\svg[12]{silver} 11\\svg[12]{golden} 6\\svg[12]{azure} \\linebreak\n"
 "      Then\\linebreak\n"
-"      3\\bronze 8\\silver 10\\golden 6\\azure}\\\\\n"
+"      3\\svg[12]{bronze} 8\\svg[12]{silver} 10\\svg[12]{golden} 6\\svg[12]{azure}}\\\\\n"
 "    \\end{tabularx}\n"
 "  }"
 msgstr ""
@@ -582,75 +573,66 @@ msgstr ""
 "    \\textbf{Stärke der Armeen in der Festung der Titanen}\\\\\n"
 "    \\bigskip\n"
 "\n"
-"    \\let\\origbronze\\bronze\n"
-"    \\let\\origsilver\\silver\n"
-"    \\let\\origgolden\\golden\n"
-"    \\let\\origazure\\azure\n"
-"    \\renewcommand{\\bronze}{\\origbronze[12]}\n"
-"    \\renewcommand{\\silver}{\\origsilver[12]}\n"
-"    \\renewcommand{\\golden}{\\origgolden[12]}\n"
-"    \\renewcommand{\\azure}{\\origazure[12]}\n"
-"\n"
-"    \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} & \\darkcell{Leicht} & \\darkcell{Normal} & \\darkcell{Experte} & \\darkcell{Unmöglich}\\\\\n"
+"    \\begin{tabularx}{0.98\\linewidth}{p{0.12\\linewidth}XXXX} & \\darkcell{Leicht} & \\darkcell{Normal} & \\darkcell{Experte} & \\darkcell{Unmöglich}\\\\\n"
 "    \\darkcell[1.2]{1 Spieler}\n"
-"      & \\lightcell[1.2]{3\\bronze 2\\silver 1\\golden 1\\azure}\n"
-"      & \\lightcell[1.2]{2\\bronze 2\\silver 2\\golden 1\\azure}\n"
-"      & \\lightcell[1.2]{2\\bronze 2\\silver 2\\golden 2\\azure}\n"
-"      & \\lightcell[1.2]{1\\bronze 2\\silver 2\\golden 3\\azure}\\\\\n"
+"      & \\lightcell[1.2]{3\\svg{bronze} 2\\svg{silver} 1\\svg{golden} 1\\svg[12]{azure}}\n"
+"      & \\lightcell[1.2]{2\\svg{bronze} 2\\svg{silver} 2\\svg{golden} 1\\svg[12]{azure}}\n"
+"      & \\lightcell[1.2]{2\\svg{bronze} 2\\svg{silver} 2\\svg{golden} 2\\svg[12]{azure}}\n"
+"      & \\lightcell[1.2]{1\\svg{bronze} 2\\svg{silver} 2\\svg{golden} 3\\svg[12]{azure}}\\\\\n"
 "    \\darkcell[1.2]{2 Spieler}\n"
-"      & \\lightcell[1.2]{5\\bronze 5\\silver 3\\golden 1\\azure}\n"
-"      & \\lightcell[1.2]{4\\bronze 5\\silver 3\\golden 2\\azure}\n"
-"      & \\lightcell[1.2]{2\\bronze 5\\silver 5\\golden 3\\azure}\n"
-"      & \\lightcell[1.2]{1\\bronze 5\\silver 7\\golden 4\\azure}\\\\\n"
+"      & \\lightcell[1.2]{5\\svg{bronze} 5\\svg{silver} 3\\svg{golden} 1\\svg[12]{azure}}\n"
+"      & \\lightcell[1.2]{4\\svg{bronze} 5\\svg{silver} 3\\svg{golden} 2\\svg[12]{azure}}\n"
+"      & \\lightcell[1.2]{2\\svg{bronze} 5\\svg{silver} 5\\svg{golden} 3\\svg[12]{azure}}\n"
+"      & \\lightcell[1.2]{1\\svg{bronze} 5\\svg{silver} 7\\svg{golden} 4\\svg[12]{azure}}\\\\\n"
 "    \\darkcell[1.8]{3 Spieler}\n"
-"      & \\lightcell[1.8]{8\\bronze 7\\silver 4\\golden 2\\azure}\n"
-"      & \\lightcell[1.8]{6\\bronze 7\\silver 5\\golden 3\\azure}\n"
-"      & \\lightcell[1.8]{2\\bronze 3\\silver 4\\golden 3\\azure \\linebreak\n"
+"      & \\lightcell[1.8]{8\\svg{bronze} 7\\svg{silver} 4\\svg{golden} 2\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{6\\svg{bronze} 7\\svg{silver} 5\\svg{golden} 3\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{2\\svg{bronze} 3\\svg{silver} 4\\svg{golden} 3\\svg{azure}\\linebreak\n"
 "        dann\\linebreak\n"
-"        2\\bronze 4\\silver 3\\golden 2\\azure}\n"
-"      & \\lightcell[1.8]{1\\bronze 3\\silver 5\\golden 3\\azure \\linebreak\n"
+"        2\\svg{bronze} 4\\svg{silver} 3\\svg{golden} 2\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{1\\svg{bronze} 3\\svg{silver} 5\\svg{golden} 3\\svg{azure}\\linebreak\n"
 "        dann\\linebreak\n"
-"        1\\bronze 4\\silver 5\\golden 3\\azure}\\\\\n"
+"        1\\svg{bronze} 4\\svg{silver} 5\\svg{golden} 3\\svg[12]{azure}}\\\\\n"
 "    \\darkcell[1.8]{4 Spieler}\n"
-"      & \\lightcell[1.8]{10\\bronze 10\\silver\\linebreak 6\\golden 2\\azure}\n"
-"      & \\lightcell[1.8]{8\\bronze 10\\silver 6\\golden 4\\azure}\n"
-"      & \\lightcell[1.8]{2\\bronze 5\\silver 5\\golden 3\\azure \\linebreak\n"
+"      & \\lightcell[1.8]{10\\svg{bronze} 10\\svg{silver}\\linebreak 6\\svg{golden} 2\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{8\\svg{bronze} 10\\svg{silver} 6\\svg{golden} 4\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{2\\svg{bronze} 5\\svg{silver} 5\\svg{golden} 3\\svg{azure}\\linebreak\n"
 "        dann\\linebreak\n"
-"        2\\bronze 5\\silver 5\\golden 3\\azure}\n"
-"      & \\lightcell[1.8]{1\\bronze 5\\silver 7\\golden 4\\azure \\linebreak\n"
+"        2\\svg{bronze} 5\\svg{silver} 5\\svg{golden} 3\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{1\\svg{bronze} 5\\svg{silver} 7\\svg{golden} 4\\svg{azure}\\linebreak\n"
 "        dann\\linebreak\n"
-"        1\\bronze 5\\silver 7\\golden 4\\azure}\\\\\n"
+"        1\\svg{bronze} 5\\svg{silver} 7\\svg{golden} 4\\svg[12]{azure}}\\\\\n"
 "    \\darkcell[1.8]{5 Spieler}\n"
-"      & \\lightcell[1.8]{6\\bronze 6\\silver 4\\golden 1\\azure \\linebreak\n"
+"      & \\lightcell[1.8]{6\\svg{bronze} 6\\svg{silver} 4\\svg{golden} 1\\svg{azure}\\linebreak\n"
 "        dann\\linebreak\n"
-"        7\\bronze 6\\silver 3\\golden 2\\azure}\n"
-"      & \\lightcell[1.8]{5\\bronze 6\\silver 4\\golden 2\\azure \\linebreak\n"
+"        7\\svg{bronze} 6\\svg{silver} 3\\svg{golden} 2\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{5\\svg{bronze} 6\\svg{silver} 4\\svg{golden} 2\\svg{azure}\\linebreak\n"
 "        dann\\linebreak\n"
-"        5\\bronze 6\\silver 4\\golden 3\\azure}\n"
-"      & \\lightcell[1.8]{3\\bronze 6\\silver 6\\golden 4\\azure \\linebreak\n"
+"        5\\svg{bronze} 6\\svg{silver} 4\\svg{golden} 3\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{3\\svg{bronze} 6\\svg{silver} 6\\svg{golden} 4\\svg{azure}\\linebreak\n"
 "        dann\\linebreak\n"
-"        3\\bronze 6\\silver 6\\golden 4\\azure}\n"
-"      & \\lightcell[1.8]{1\\bronze 6\\silver 8\\golden 6\\azure \\linebreak\n"
+"        3\\svg{bronze} 6\\svg{silver} 6\\svg{golden} 4\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{1\\svg{bronze} 6\\svg{silver} 8\\svg{golden} 6\\svg{azure}\\linebreak\n"
 "        dann\\linebreak\n"
-"        2\\bronze 6\\silver 8\\golden 5\\azure}\\\\\n"
+"        2\\svg{bronze} 6\\svg{silver} 8\\svg{golden} 5\\svg[12]{azure}}\\\\\n"
 "    \\darkcell[1.8]{6 Spieler}\n"
-"      & \\lightcell[1.8]{8\\bronze 8\\silver 4\\golden 1\\azure \\linebreak\n"
+"      & \\lightcell[1.8]{8\\svg{bronze} 8\\svg{silver} 4\\svg{golden} 1\\svg{azure}\\linebreak\n"
 "        dann\\linebreak\n"
-"        7\\bronze 7\\silver 5\\golden 2\\azure}\n"
-"      & \\lightcell[1.8]{6\\bronze 8\\silver 4\\golden 3\\azure \\linebreak\n"
+"        7\\svg{bronze} 7\\svg{silver} 5\\svg{golden} 2\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{6\\svg{bronze} 8\\svg{silver} 4\\svg{golden} 3\\svg{azure}\\linebreak\n"
 "        dann\\linebreak\n"
-"        6\\bronze 7\\silver 5\\golden 3\\azure}\n"
-"      & \\lightcell[1.8]{3\\bronze 8\\silver 7\\golden 5\\azure \\linebreak\n"
+"        6\\svg{bronze} 7\\svg{silver} 5\\svg{golden} 3\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{3\\svg{bronze} 8\\svg{silver} 7\\svg{golden} 5\\svg{azure}\\linebreak\n"
 "        dann\\linebreak\n"
-"        3\\bronze 7\\silver 8\\golden 4\\azure}\n"
-"      & \\lightcell[1.8]{3\\bronze 7\\silver 11\\golden 6\\azure \\linebreak\n"
+"        3\\svg{bronze} 7\\svg{silver} 8\\svg{golden} 4\\svg[12]{azure}}\n"
+"      & \\lightcell[1.8]{3\\svg{bronze} 7\\svg{silver} 11\\svg{golden} 6\\svg{azure}\\linebreak\n"
 "        dann\\linebreak\n"
-"        3\\bronze 8\\silver 10\\golden 6\\azure}\\\\\n"
+"        3\\svg{bronze} 8\\svg{silver} 10\\svg{golden} 6\\svg[12]{azure}}\\\\\n"
 "    \\end{tabularx}\n"
 "  }"
 
 #. type: center
-#: coops/titans_stronghold.tex:201
+#: coops/titans_stronghold.tex:192
 msgid ""
 "\\transparent{0.2}{\\includegraphics[width=0.55\\linewidth, keepaspectratio]"
 "{\\art/land_mine.png}}"
@@ -659,7 +641,7 @@ msgstr ""
 "{\\art/land_mine.png}}"
 
 #. type: tikzpicture
-#: coops/titans_stronghold.tex:209
+#: coops/titans_stronghold.tex:200
 #, no-wrap
 msgid ""
 "[remember picture, overlay]\n"
@@ -673,32 +655,32 @@ msgstr ""
 "  };"
 
 #. type: minipage
-#: coops/titans_stronghold.tex:246 coops/emerald_island.tex:121
+#: coops/titans_stronghold.tex:237 coops/emerald_island.tex:121
 msgid "\\captionof{figure}{\\textbf{1-PLAYER SCENARIO}}"
 msgstr "\\captionof{figure}{\\textbf{1-SPIELER-SZENARIO}}"
 
 #. type: minipage
-#: coops/titans_stronghold.tex:246 coops/emerald_island.tex:121
+#: coops/titans_stronghold.tex:237 coops/emerald_island.tex:121
 msgid "\\captionof{figure}{\\textbf{2-PLAYER SCENARIO}}"
 msgstr "\\captionof{figure}{\\textbf{2-SPIELER-SZENARIO}}"
 
 #.  \linebreak
 #. type: minipage
-#: coops/titans_stronghold.tex:246 coops/emerald_island.tex:121
+#: coops/titans_stronghold.tex:237 coops/emerald_island.tex:121
 msgid "\\captionof{figure}{\\textbf{3-PLAYER SCENARIO}}"
 msgstr "\\captionof{figure}{\\textbf{3-SPIELER-SZENARIO}}"
 
 #. type: minipage
-#: coops/titans_stronghold.tex:246 coops/emerald_island.tex:121
+#: coops/titans_stronghold.tex:237 coops/emerald_island.tex:121
 msgid "\\captionof{figure}{\\textbf{4-PLAYER SCENARIO}}"
 msgstr "\\captionof{figure}{\\textbf{4-SPIELER-SZENARIO}}"
 
 #. type: minipage
-#: coops/titans_stronghold.tex:246
+#: coops/titans_stronghold.tex:237
 msgid "\\captionof{figure}{\\textbf{5-PLAYER SCENARIO}}"
 msgstr "\\captionof{figure}{\\textbf{5-SPIELER-SZENARIO}}"
 
 #. type: minipage
-#: coops/titans_stronghold.tex:246
+#: coops/titans_stronghold.tex:237
 msgid "\\captionof{figure}{\\textbf{6-PLAYER SCENARIO}}"
 msgstr "\\captionof{figure}{\\textbf{6-SPIELER-SZENARIO}}"
