Fix layout and glyphs

--- a/draft-scenarios/clash/dragnarok.tex
+++ b/draft-scenarios/clash/dragnarok.tex
@@ -1,7 +1,7 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Clash Scenario}{Dragnarøk}{\images/dragon.png}
+\addscenariosection{1}{Clash Scenario}{Dragnarøk}{\images/dragnarok.png}
 
-\begin{multicols*}{2}
+\begin{multicols}{2}
 
 \textbf{Author:} Da
 
@@ -26,7 +26,7 @@ This Scenario plays out over 12 Rounds.
   \item A Few chosen \bronze\ Units.
 \end{itemize}
 
-\textbf{Town Buildings:} \bronze\ dwelling, Mage Guild \textit{Do not gain "When Built" -bonus}.
+\textbf{Town Buildings:} \bronze\ Dwelling, Mage Guild \textit{Do not gain ``When Built'' bonus}.
 
 \subsection*{\MakeUppercase{Map Setup}}
 Take the following Map Tiles and arrange them as shown in the Scenario map layout:
@@ -79,21 +79,17 @@ The player with the most Victory Points (VP) wins. In case of a tie, the player 
 \begin{itemize}
   \item Players may not recruit Secondary Heroes.
   \item Players may use their M\&M Deck while paying to defend their Town.
-  \item If a Hero stand on a removed Tile, move them to the nearest revealed Field and reduce their lowest initiative Unit's \svg{health} to 0. That player suffers -1 \svg{movement} this Round.
+  \item If a Hero stand on a removed Tile, move them to the nearest revealed Field and reduce their lowest initiative Unit's \svg{health_points} to 0. That player suffers -1 \svg{movement} this Round.
   \item Level VII Neutral Combats cannot be skipped.
-\columnbreak
-  \item \textbf{Dragon Utopia:} Gain 10 \svg{gold}, 1\svg{valuables} and Search(2)\svg{artifacts} twice.
+  \item \textbf{Dragon Utopia:} Gain 10 \svg{gold}, 1 \svg{valuables} and Search (2) \svg{artifact} twice.
   \item \textbf{Obelisk:} Roll 1 \svg{resource} or \svg{treasure}.
   \item When Tiles are removed, reduce any production provided by mines or settlements on that Tile.
-  \item Remove "Astrologers proclaim week of the magic tortoise from the Astrologers Proclaim Deck.
+  \item Remove ``Astrologers proclaim week of the Magic Tortoise'' from the Astrologers Proclaim Deck.
 \end{itemize}
-\end{multicols*}
-
-\vspace*{\fill}
+\end{multicols}
 
 \begin{center}
   \vspace*{\fill}
-  \includegraphics[width=1.0\linewidth]{\maps/dragnarok.png}
-  \captionof{figure}{\textbf{SCENARIO MAP LAYOUT}}
+  \includegraphics[width=\linewidth]{\maps/dragnarok.png}
   \vspace*{\fill}
 \end{center}
